# manga-ocr-android

./: .gitignore  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/net/dhleong/mangaocr/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/net/dhleong/mangaocr/: MainActivity.kt
app/src/main/java/net/dhleong/mangaocr/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/net/dhleong/mangaocr/: ExampleUnitTest.kt
gradle/: kotlinx.versions.toml  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
model-dev/: README.md  __main__.py  const.py  convert.py  download.py  quant.py
model-dev/check/: __init__.py
model-dev/convert/: __init__.py  mangaocr.py
model-dev/quant/: __init__.py  ops.py
model-dev/reauthor/: __init__.py  mangaocr.py
model-dev/train/: __init__.py  dataset.py
